// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No age nor time 1`] = `
<span
  class="catalog-item-viewer s-q3jgxPFCAYQV"
>
  <article
    class="s-hGRcS-4InB4p"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-hGRcS-4InB4p"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <div
      class="content s-hGRcS-4InB4p"
    >
      <legend
        class="s-hGRcS-4InB4p"
      >
        <div
          class="title s-hGRcS-4InB4p"
        >
          <h3
            class="s-hGRcS-4InB4p"
          >
            Solitaire
          </h3>
           
          <details
            class="s-hGRcS-4InB4p hidden"
          >
            <summary
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Créé par : 
              </strong>
              undefined
            </summary>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Illustré par : 
              </strong>
              undefined
            </p>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Distribué par : 
              </strong>
              undefined
            </p>
          </details>
        </div>
         
        <span
          class="characteristics s-hGRcS-4InB4p"
        >
          <span
            class="s-hGRcS-4InB4p hidden"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              people
            </span>
            undefined
          </span>
           
          <span
            class="s-hGRcS-4InB4p hidden"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              access_time
            </span>
            undefined'
          </span>
           
          <span
            class="s-hGRcS-4InB4p hidden"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              person
            </span>
            undefined+
          </span>
        </span>
      </legend>
    </div>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;

exports[`With characteristics 1`] = `
<span
  class="catalog-item-viewer s-q3jgxPFCAYQV"
>
  <article
    class="s-hGRcS-4InB4p"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-hGRcS-4InB4p"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <div
      class="content s-hGRcS-4InB4p"
    >
      <legend
        class="s-hGRcS-4InB4p"
      >
        <div
          class="title s-hGRcS-4InB4p"
        >
          <h3
            class="s-hGRcS-4InB4p"
          >
            Solitaire
          </h3>
           
          <details
            class="s-hGRcS-4InB4p hidden"
          >
            <summary
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Créé par : 
              </strong>
              undefined
            </summary>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Illustré par : 
              </strong>
              undefined
            </p>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Distribué par : 
              </strong>
              undefined
            </p>
          </details>
        </div>
         
        <span
          class="characteristics s-hGRcS-4InB4p"
        >
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              people
            </span>
            2
          </span>
           
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              access_time
            </span>
            30'
          </span>
           
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              person
            </span>
            10+
          </span>
        </span>
      </legend>
    </div>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;

exports[`With characteristics and copyright 1`] = `
<span
  class="catalog-item-viewer s-q3jgxPFCAYQV"
>
  <article
    class="s-hGRcS-4InB4p"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-hGRcS-4InB4p"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <div
      class="content s-hGRcS-4InB4p"
    >
      <legend
        class="s-hGRcS-4InB4p"
      >
        <div
          class="title s-hGRcS-4InB4p"
        >
          <h3
            class="s-hGRcS-4InB4p"
          >
            Solitaire
          </h3>
           
          <details
            class="s-hGRcS-4InB4p"
          >
            <summary
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Créé par : 
              </strong>
              John Doe, Jane Lark
            </summary>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Illustré par : 
              </strong>
              Amy Banks, Mark Loom
            </p>
             
            <p
              class="s-hGRcS-4InB4p"
            >
              <strong
                class="s-hGRcS-4InB4p"
              >
                Distribué par : 
              </strong>
              Awesome games, Games from elsewhere
            </p>
          </details>
        </div>
         
        <span
          class="characteristics s-hGRcS-4InB4p"
        >
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              people
            </span>
            2-4
          </span>
           
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              access_time
            </span>
            30'
          </span>
           
          <span
            class="s-hGRcS-4InB4p"
          >
            <span
              class="material-icons s-hGRcS-4InB4p"
            >
              person
            </span>
            10+
          </span>
        </span>
      </legend>
    </div>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;
